On mobile show a message and prevent one finger pan

--- a/webapp/src/styles/map.scss
+++ b/webapp/src/styles/map.scss
@@ -1,5 +1,26 @@
 @import "./variables";
 
+.leaflet-swiping::after {
+  content: 'Use two fingers to move the map';
+  color: #fff;
+  font-family: 'Lato', sans-serif;
+  font-size: 20px;
+  font-weight: 300;
+  text-align: center;
+  justify-content:center;
+  display: flex;
+  align-items: center;
+  padding: 15px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
+  pointer-events:none;
+}
+
 .map-sidebar {
   width: 280px;
 }
